--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,19 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: php-actions/composer@v6
-      - name: Install dependencies
+
+      - name: Prepare for production
+        run: |
+          rm .gitignore
+          mv .deploy.gitignore .gitignore
+          rm -rf .github
+          rm -rf .idea
+          rm -rf .vscode
+          rm -rf build
+          rm -rf tests
+          rm phpunit.xml.dist
+
+      - name: Composer Install
         uses: php-actions/composer@v6
         with:
           command: install -o --no-dev --no-interaction --prefer-dist
@@ -17,10 +29,8 @@ jobs:
       - name: Create a built branch
         run: |
           BRANCH_NAME=$(echo $GITHUB_REF | grep -oP '(?<=refs\/heads\/).*')
-          rm .gitignore
-          mv .deploy.gitignore .gitignore
-          git config --global user.email "ci@company.com"
-          git config --global user.name "Company CI"
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Action CI"
           git remote set-url origin https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git
           git checkout -b $BRANCH_NAME-built
           git add -A && git commit -m "built from $GITHUB_SHA"
